# EffectiveCpp

Item01/Item01_FederalCppHello/: CMakeLists.txt  main.cpp
Item02/Item02_PreferNotDefine/: CMakeLists.txt  item02.cc  item02.h  main.cpp
